<resources>
    <string name="app_name">MiHome</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_stats">Statics</string>
    <string name="title_routines">Routines</string>
    <string name="title_settings">Settings</string>
    <string name="rooms">Rooms</string>
    <string name="devices">Devices</string>
    <string name="add_new">Add new</string>
    <string name="add_new_room">Add new Room</string>
    <string name="add_new_device">Add new Device</string>
    <string name="thermostat">Thermostat</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="living_room">Living room</string>
    <string name="temperature_celsius">Temperature,ºC</string>
    <string name="heating">Heating</string>
    <string name="cooling">Cooling</string>
    <string name="title_light">Light</string>
    <string name="title_thermostat">Thermostat</string>
    <string name="title_fans">Fans</string>
    <string name="title_fridge">Fridge</string>
    <string name="title_speaker">Speaker</string>
    <string name="main_lights">Main Lights</string>
    <string name="hue">Hue</string>
    <string name="title_activity_login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="click_here"><u>Click here</u></string>
    <string name="new_resident">New Resident</string>
    <string name="enter_your_house">Enter Your House</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="add_room">Add Room</string>
    <string name="save">SAVE</string>
    <string name="enter_room_s_name">Enter Room\'s name</string>
    <string name="plug_in_the_outlet">Plug in the smart outlet\nyour device wil connect automatically</string>
    <string name="a11y_add_room_or_device">Add room or device</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_date">Choose Date</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="view_detail">View Detail</string>
    <string name="statics">Statics</string>
    <string name="your_home">Your Home</string>
</resources>