<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/devices_tab_navigation.xml"
    app:startDestination="@id/navigation_light">

    <fragment
        android:id="@+id/navigation_light"
        android:name="comfabricethilaw.smarthomeapp.ui.home.DevicesLightFragment"
        android:label="@string/title_light"
        tools:layout="@layout/devices_light" />

    <fragment
        android:id="@+id/navigation_thermostat"
        android:name="comfabricethilaw.smarthomeapp.ui.home.DevicesThermostatFragment"
        android:label="@string/title_thermostat"
        tools:layout="@layout/devices_thermostat" />

    <fragment
        android:id="@+id/navigation_fridge"
        android:name="comfabricethilaw.smarthomeapp.ui.home.DevicesFridgeFragment"
        android:label="@string/title_fridge"
        tools:layout="@layout/devices_fridge" />

    <fragment
        android:id="@+id/navigation_fans"
        android:name="comfabricethilaw.smarthomeapp.ui.home.DevicesFansFragment"
        android:label="@string/title_fans"
        tools:layout="@layout/devices_fans" />

    <fragment
        android:id="@+id/navigation_speaker"
        android:name="comfabricethilaw.smarthomeapp.ui.home.DevicesSpeakerFragment"
        android:label="@string/title_speaker"
        tools:layout="@layout/devices_speaker" />

</navigation>