<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="comfabricethilaw.mihome.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_statics"
        android:name="comfabricethilaw.mihome.ui.dashboard.DashboardFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_routines"
        android:name="comfabricethilaw.mihome.ui.notifications.NotificationsFragment"
        android:label="@string/title_routines"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_add_room_or_device"
        android:name="comfabricethilaw.mihome.ui.home.ModalAddDeviceOrRoom"
        android:label=""
        tools:layout="@layout/add_device_or_room_modal" />

    <fragment
        android:id="@+id/navigation_add_room"
        android:name="comfabricethilaw.mihome.ui.home.AddRoomFragment"
        android:label=""
        tools:layout="@layout/add_room_fragment" />

    <fragment
        android:id="@+id/navigation_add_device"
        android:name="comfabricethilaw.mihome.ui.home.AddDeviceFragment"
        android:label=""
        tools:layout="@layout/add_device_fragment" />

</navigation>