<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bg_picture"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:foreground="#8500428F"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@android:id/icon"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@android:id/title"
            style="@style/TextAppearance.SmartHome.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app_name"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/grid_3"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@android:id/icon" />


        <EditText
            android:id="@+id/input_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/grid_4"
            android:layout_marginBottom="@dimen/grid_4"
            android:hint="@string/Username"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white_a50"
            app:layout_constraintBottom_toTopOf="@id/input_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@android:id/title"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/grid_4"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white_a50"
            app:boxStrokeColor="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@id/btn_help_password_forgot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_username" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/grid_4"
            android:layout_marginTop="@dimen/grid_4"
            android:layout_marginBottom="@dimen/grid_3"
            android:paddingVertical="@dimen/grid_1_5"
            android:text="@string/enter_your_house"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/grid_1"
            app:layout_constraintBottom_toTopOf="@id/btn_new_resident"
            app:layout_constraintEnd_toEndOf="@+id/input_password"
            app:layout_constraintStart_toStartOf="@+id/input_password"
            app:layout_constraintTop_toBottomOf="@+id/input_password"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_new_resident"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/grid_1_5"
            android:text="@string/new_resident"
            android:textAllCaps="false"
            app:backgroundTint="@color/charade"
            app:cornerRadius="@dimen/grid_1"
            app:layout_constraintBottom_toTopOf="@+id/label_password_forgot"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_in"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

        <TextView
            android:id="@+id/label_password_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/grid_3"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_help_password_forgot"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/btn_help_password_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_1_5"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/click_here"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/label_password_forgot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_password_forgot" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>