<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/destination_layout_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/grid_1_7">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.SmartHome.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/grid_2"
            android:layout_marginTop="@dimen/grid_3"
            android:fontFamily="@font/sfprotext_semibold"
            android:text="@string/main_lights"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subTitle"
            style="@style/TextAppearance.SmartHome.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfprotext_semibold"
            android:text="@string/living_room"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/grid_2"
            android:checked="true"
            android:textAllCaps="false"
            android:textOff="@string/off"
            android:textOn="@string/on"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title" />

        <TextView
            android:id="@+id/measuredValue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="45"
            android:textColor="?android:attr/colorPrimary"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/unit"
            app:layout_constraintStart_toStartOf="@id/measureLabel"
            app:layout_constraintTop_toBottomOf="@id/subTitle"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_2"
            android:text="lm"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/measureLabel"
            app:layout_constraintTop_toTopOf="@id/measuredValue" />

        <TextView
            android:id="@+id/measureLabel"
            android:layout_width="@dimen/measured_data_label_width"
            android:layout_height="wrap_content"
            android:text="Light Strength"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/measuredValue" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/bg_btn_heating_setting"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:layout_marginHorizontal="@dimen/grid_1_7"
            android:background="@color/silver_2"
            app:layout_constraintBottom_toTopOf="@id/label_btn_energy_setting"
            app:layout_constraintEnd_toEndOf="@id/label_btn_energy_setting"
            app:layout_constraintStart_toStartOf="@+id/label_btn_energy_setting"
            app:shapeAppearance="@style/ShapeAppearanceCircle" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_energy_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_energy"
            app:backgroundTint="@color/white"
            app:elevation="0dp"
            app:fabCustomSize="48dp"
            app:layout_constraintBottom_toBottomOf="@id/bg_btn_heating_setting"
            app:layout_constraintEnd_toEndOf="@id/bg_btn_heating_setting"
            app:layout_constraintStart_toStartOf="@id/bg_btn_heating_setting"
            app:layout_constraintTop_toTopOf="@id/bg_btn_heating_setting"
            app:rippleColor="@color/orange_a10"

            app:tint="@color/gray"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/label_btn_energy_setting"
            style="@style/TextAppearance.SmartHome.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/grid_1_7"
            android:fontFamily="@font/sfprotext_semibold"
            android:text="12Kw"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/measuredValue" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/bg_btn_hue_setting"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:layout_marginHorizontal="@dimen/grid_1_7"
            android:background="@color/silver_2"
            app:layout_constraintBottom_toTopOf="@id/label_btn_hue_setting"
            app:layout_constraintEnd_toEndOf="@id/label_btn_hue_setting"
            app:layout_constraintStart_toStartOf="@+id/label_btn_hue_setting"
            app:shapeAppearance="@style/ShapeAppearanceCircle" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_hue_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_brightness"
            app:backgroundTint="@color/white"
            app:elevation="0dp"
            app:fabCustomSize="48dp"
            app:layout_constraintBottom_toBottomOf="@id/bg_btn_hue_setting"
            app:layout_constraintEnd_toEndOf="@id/bg_btn_hue_setting"
            app:layout_constraintStart_toStartOf="@id/bg_btn_hue_setting"
            app:layout_constraintTop_toTopOf="@id/bg_btn_hue_setting"
            app:rippleColor="@color/orange_a10"
            app:tint="?android:attr/colorPrimary" />

        <TextView
            android:id="@+id/label_btn_hue_setting"
            style="@style/TextAppearance.SmartHome.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="@dimen/grid_1_7"
            android:fontFamily="@font/sfprotext_semibold"
            android:text="@string/hue"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_btn_energy_setting" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>