<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.AddRoomFragment">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Theme.SmartHome.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/charade"
            app:navigationIcon="@drawable/ic_back"
            app:popupTheme="@style/Theme.SmartHomeApp.PopupOverlay">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/TextAppearance.SmartHome.Title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="48dp"
                    android:gravity="center"
                    android:text="@string/add_room"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/save" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/grid_2">

            <TextView
                android:id="@+id/search_bar_hint"
                style="@style/TextAppearance.SmartHome.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_room_s_name"
                android:textColor="@color/ford_gray"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/grid_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/input_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                android:background="@drawable/bg_stroke"
                android:minHeight="@dimen/grid_5"
                android:paddingHorizontal="@dimen/grid_2"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_bar_hint" />

            <TextView
                android:id="@+id/list_item_hint"
                style="@style/TextAppearance.SmartHome.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_4"
                android:text="@string/enter_room_s_name"
                android:textColor="@color/ford_gray"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_search" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingVertical="@dimen/grid_2"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/list_item_hint"
                app:spanCount="3"
                tools:listitem="@layout/list_item_select_room" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>